Fix grid positioing of header to avoid overlap at smaller screen size. Change breakpoint to 943px to change to mobile menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ nav li{
 nav a {
     color: white;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-transform: uppercase;
     opacity: 0;
     transition: opacity 150ms ease-in-out;
@@ -165,7 +165,7 @@ nav a:hover {
 }
 
 
-@media all and (min-width: 798px) {
+@media all and (min-width: 943px) {
     
     .main {
     display: grid;
@@ -187,7 +187,7 @@ nav a:hover {
 
     .header {
         display: grid;
-        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
+        grid-template-columns: 1fr 3fr minmax(600px, 3fr) 1fr;
     }
 
     .header h1 {
@@ -195,13 +195,13 @@ nav a:hover {
     }
 
     .logo {
-        grid-column: 2 / 3;
+        grid-column: 2/3;
         color: white;
     }
 
     nav {
         all: unset;
-        grid-column: 3 / 4;
+        grid-column: 3/4;
         display: flex;
         justify-content: flex-end;
         align-items: center;
@@ -230,6 +230,7 @@ nav a:hover {
     nav a {
         opacity: 1;
         position: relative;
+        color: black;
     }
 
     nav a::before {
